opam-version: "1.2"
name: "api-cohttp-lwt"
version: "0.0.1"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/api-cohttp-lwt/"
bug-reports: "https://github.com/ghuysmans/api-cohttp-lwt/issues"
dev-repo: "git://github.com/ghuysmans/api-cohttp-lwt/"
build: [["dune" "build" "-p" name "-j" jobs]]
synopsis: "js_of_ocaml-friendly HTTP API client library"
depends: [
  "dune" {build}
  "xml-light"
  "ppx_deriving_yojson"
  "cohttp-lwt-jsoo"
]
